Fixing style problems on mobile.

--- a/app/assets/stylesheets/frontend/layout.sass
+++ b/app/assets/stylesheets/frontend/layout.sass
@@ -42,7 +42,8 @@ header
   img
     @include span-columns(4 of 12)
     @include media($mobile)
-      @include span-columns(5 of 12)
+      @include span-columns(8 of 12)
+      padding-top: 1.5em
   nav
     top: 0
     right: 0
