--- a/app/assets/stylesheets/frontend/pages.sass
+++ b/app/assets/stylesheets/frontend/pages.sass
@@ -5,6 +5,8 @@
     padding: 0 0 0 1.25em
     div
       @include span-columns(2)
+      @include media($mobile)
+        @include span-columns(12)
       margin-bottom: 1em
       
   &.pages_imprint ul
